parser/parser.output
Terminals unused in grammar

    COMMENTLINE
    CMD_OPTION


Grammar

    0 $accept: spice $end

    1 spice: netlist end

    2 end: end EOL
    3    | END

    4 netlist: netlist line
    5        | line

    6 line: component EOL
    7     | command EOL
    8     | EOL
    9     | error EOL

   10 component: resistor
   11          | capacitor
   12          | inductor
   13          | vccs
   14          | vs
   15          | vcvs
   16          | cs
   17          | cccs
   18          | ccvs

   19 command: print
   20        | dc
   21        | ac
   22        | tran
   23        | op
   24        | plot

   25 resistor: RESISTOR node node value

   26 capacitor: CAPACITOR node node value

   27 inductor: INDUCTOR node node value

   28 vccs: VCCS node node node node value

   29 vs: VS node node
   30   | VS node node value
   31   | vs RK_DC value
   32   | vs RK_AC value

   33 vcvs: VCVS node node node node value

   34 cs: CS node node value

   35 cccs: CCCS node node VS value

   36 ccvs: CCVS node node VS value

   37 op: CMD_OP

   38 dc: CMD_DC
   39   | dc VS value value value
   40   | dc CS value value value

   41 ac: CMD_AC RK_DEC value value value
   42   | CMD_AC RK_LIN value value value
   43   | CMD_AC RK_OCT value value value

   44 tran: CMD_TRAN value
   45     | CMD_TRAN value value
   46     | CMD_TRAN value value value

   47 print: CMD_PRINT RK_AC
   48      | CMD_PRINT RK_DC
   49      | CMD_PRINT RK_OP
   50      | CMD_PRINT RK_TRAN
   51      | print VAR_V
   52      | print VAR_I

   53 plot: CMD_PLOT RK_AC
   54     | CMD_PLOT RK_DC
   55     | CMD_PLOT RK_OP
   56     | CMD_PLOT RK_TRAN
   57     | plot VAR_V
   58     | plot VAR_I

   59 node: STRING
   60     | INTEGER
   61     | RESISTOR
   62     | CAPACITOR
   63     | INDUCTOR
   64     | VS
   65     | VCCS

   66 value: VALUE
   67      | FLOAT
   68      | INTEGER


Terminals, with rules where they appear

    $end (0) 0
    error (256) 9
    FLOAT <f> (258) 67
    STRING <s> (259) 59
    INTEGER <n> (260) 60 68
    INDUCTOR <s> (261) 27 63
    CAPACITOR <s> (262) 26 62
    RESISTOR <s> (263) 25 61
    VS <s> (264) 29 30 35 36 39 64
    VCCS <s> (265) 28 65
    VCVS <s> (266) 33
    CS <s> (267) 34 40
    CCVS <s> (268) 36
    CCCS <s> (269) 35
    COMMENTLINE <s> (270)
    VALUE <f> (271) 66
    END (272) 3
    EOL (273) 2 6 7 8 9
    VAR_V <s> (274) 51 57
    VAR_I <s> (275) 52 58
    RK_OP <s> (276) 49 55
    RK_AC <s> (277) 32 47 53
    RK_DC <s> (278) 31 48 54
    RK_TRAN <s> (279) 50 56
    RK_DEC <s> (280) 41
    RK_OCT <s> (281) 43
    RK_LIN <s> (282) 42
    CMD_PRINT (283) 47 48 49 50
    CMD_OP (284) 37
    CMD_DC (285) 38
    CMD_AC (286) 41 42 43
    CMD_PLOT (287) 53 54 55 56
    CMD_OPTION (288)
    CMD_TRAN (289) 44 45 46


Nonterminals, with rules where they appear

    $accept (35)
        on left: 0
    spice (36)
        on left: 1
        on right: 0
    end (37)
        on left: 2 3
        on right: 1 2
    netlist (38)
        on left: 4 5
        on right: 1 4
    line (39)
        on left: 6 7 8 9
        on right: 4 5
    component (40)
        on left: 10 11 12 13 14 15 16 17 18
        on right: 6
    command (41)
        on left: 19 20 21 22 23 24
        on right: 7
    resistor <s> (42)
        on left: 25
        on right: 10
    capacitor <s> (43)
        on left: 26
        on right: 11
    inductor <s> (44)
        on left: 27
        on right: 12
    vccs <s> (45)
        on left: 28
        on right: 13
    vs <s> (46)
        on left: 29 30 31 32
        on right: 14 31 32
    vcvs <s> (47)
        on left: 33
        on right: 15
    cs <s> (48)
        on left: 34
        on right: 16
    cccs <s> (49)
        on left: 35
        on right: 17
    ccvs <s> (50)
        on left: 36
        on right: 18
    op (51)
        on left: 37
        on right: 23
    dc (52)
        on left: 38 39 40
        on right: 20 39 40
    ac (53)
        on left: 41 42 43
        on right: 21
    tran (54)
        on left: 44 45 46
        on right: 22
    print (55)
        on left: 47 48 49 50 51 52
        on right: 19 51 52
    plot (56)
        on left: 53 54 55 56 57 58
        on right: 24 57 58
    node <s> (57)
        on left: 59 60 61 62 63 64 65
        on right: 25 26 27 28 29 30 33 34 35 36
    value <f> (58)
        on left: 66 67 68
        on right: 25 26 27 28 30 31 32 33 34 35 36 39 40 41 42 43 44 45 46


State 0

    0 $accept: • spice $end

    error      shift, and go to state 1
    INDUCTOR   shift, and go to state 2
    CAPACITOR  shift, and go to state 3
    RESISTOR   shift, and go to state 4
    VS         shift, and go to state 5
    VCCS       shift, and go to state 6
    VCVS       shift, and go to state 7
    CS         shift, and go to state 8
    CCVS       shift, and go to state 9
    CCCS       shift, and go to state 10
    EOL        shift, and go to state 11
    CMD_PRINT  shift, and go to state 12
    CMD_OP     shift, and go to state 13
    CMD_DC     shift, and go to state 14
    CMD_AC     shift, and go to state 15
    CMD_PLOT   shift, and go to state 16
    CMD_TRAN   shift, and go to state 17

    spice      go to state 18
    netlist    go to state 19
    line       go to state 20
    component  go to state 21
    command    go to state 22
    resistor   go to state 23
    capacitor  go to state 24
    inductor   go to state 25
    vccs       go to state 26
    vs         go to state 27
    vcvs       go to state 28
    cs         go to state 29
    cccs       go to state 30
    ccvs       go to state 31
    op         go to state 32
    dc         go to state 33
    ac         go to state 34
    tran       go to state 35
    print      go to state 36
    plot       go to state 37


State 1

    9 line: error • EOL

    EOL  shift, and go to state 38


State 2

   27 inductor: INDUCTOR • node node value

    STRING     shift, and go to state 39
    INTEGER    shift, and go to state 40
    INDUCTOR   shift, and go to state 41
    CAPACITOR  shift, and go to state 42
    RESISTOR   shift, and go to state 43
    VS         shift, and go to state 44
    VCCS       shift, and go to state 45

    node  go to state 46


State 3

   26 capacitor: CAPACITOR • node node value

    STRING     shift, and go to state 39
    INTEGER    shift, and go to state 40
    INDUCTOR   shift, and go to state 41
    CAPACITOR  shift, and go to state 42
    RESISTOR   shift, and go to state 43
    VS         shift, and go to state 44
    VCCS       shift, and go to state 45

    node  go to state 47


State 4

   25 resistor: RESISTOR • node node value

    STRING     shift, and go to state 39
    INTEGER    shift, and go to state 40
    INDUCTOR   shift, and go to state 41
    CAPACITOR  shift, and go to state 42
    RESISTOR   shift, and go to state 43
    VS         shift, and go to state 44
    VCCS       shift, and go to state 45

    node  go to state 48


State 5

   29 vs: VS • node node
   30   | VS • node node value

    STRING     shift, and go to state 39
    INTEGER    shift, and go to state 40
    INDUCTOR   shift, and go to state 41
    CAPACITOR  shift, and go to state 42
    RESISTOR   shift, and go to state 43
    VS         shift, and go to state 44
    VCCS       shift, and go to state 45

    node  go to state 49


State 6

   28 vccs: VCCS • node node node node value

    STRING     shift, and go to state 39
    INTEGER    shift, and go to state 40
    INDUCTOR   shift, and go to state 41
    CAPACITOR  shift, and go to state 42
    RESISTOR   shift, and go to state 43
    VS         shift, and go to state 44
    VCCS       shift, and go to state 45

    node  go to state 50


State 7

   33 vcvs: VCVS • node node node node value

    STRING     shift, and go to state 39
    INTEGER    shift, and go to state 40
    INDUCTOR   shift, and go to state 41
    CAPACITOR  shift, and go to state 42
    RESISTOR   shift, and go to state 43
    VS         shift, and go to state 44
    VCCS       shift, and go to state 45

    node  go to state 51


State 8

   34 cs: CS • node node value

    STRING     shift, and go to state 39
    INTEGER    shift, and go to state 40
    INDUCTOR   shift, and go to state 41
    CAPACITOR  shift, and go to state 42
    RESISTOR   shift, and go to state 43
    VS         shift, and go to state 44
    VCCS       shift, and go to state 45

    node  go to state 52


State 9

   36 ccvs: CCVS • node node VS value

    STRING     shift, and go to state 39
    INTEGER    shift, and go to state 40
    INDUCTOR   shift, and go to state 41
    CAPACITOR  shift, and go to state 42
    RESISTOR   shift, and go to state 43
    VS         shift, and go to state 44
    VCCS       shift, and go to state 45

    node  go to state 53


State 10

   35 cccs: CCCS • node node VS value

    STRING     shift, and go to state 39
    INTEGER    shift, and go to state 40
    INDUCTOR   shift, and go to state 41
    CAPACITOR  shift, and go to state 42
    RESISTOR   shift, and go to state 43
    VS         shift, and go to state 44
    VCCS       shift, and go to state 45

    node  go to state 54


State 11

    8 line: EOL •

    $default  reduce using rule 8 (line)


State 12

   47 print: CMD_PRINT • RK_AC
   48      | CMD_PRINT • RK_DC
   49      | CMD_PRINT • RK_OP
   50      | CMD_PRINT • RK_TRAN

    RK_OP    shift, and go to state 55
    RK_AC    shift, and go to state 56
    RK_DC    shift, and go to state 57
    RK_TRAN  shift, and go to state 58


State 13

   37 op: CMD_OP •

    $default  reduce using rule 37 (op)


State 14

   38 dc: CMD_DC •

    $default  reduce using rule 38 (dc)


State 15

   41 ac: CMD_AC • RK_DEC value value value
   42   | CMD_AC • RK_LIN value value value
   43   | CMD_AC • RK_OCT value value value

    RK_DEC  shift, and go to state 59
    RK_OCT  shift, and go to state 60
    RK_LIN  shift, and go to state 61


State 16

   53 plot: CMD_PLOT • RK_AC
   54     | CMD_PLOT • RK_DC
   55     | CMD_PLOT • RK_OP
   56     | CMD_PLOT • RK_TRAN

    RK_OP    shift, and go to state 62
    RK_AC    shift, and go to state 63
    RK_DC    shift, and go to state 64
    RK_TRAN  shift, and go to state 65


State 17

   44 tran: CMD_TRAN • value
   45     | CMD_TRAN • value value
   46     | CMD_TRAN • value value value

    FLOAT    shift, and go to state 66
    INTEGER  shift, and go to state 67
    VALUE    shift, and go to state 68

    value  go to state 69


State 18

    0 $accept: spice • $end

    $end  shift, and go to state 70


State 19

    1 spice: netlist • end
    4 netlist: netlist • line

    error      shift, and go to state 1
    INDUCTOR   shift, and go to state 2
    CAPACITOR  shift, and go to state 3
    RESISTOR   shift, and go to state 4
    VS         shift, and go to state 5
    VCCS       shift, and go to state 6
    VCVS       shift, and go to state 7
    CS         shift, and go to state 8
    CCVS       shift, and go to state 9
    CCCS       shift, and go to state 10
    END        shift, and go to state 71
    EOL        shift, and go to state 11
    CMD_PRINT  shift, and go to state 12
    CMD_OP     shift, and go to state 13
    CMD_DC     shift, and go to state 14
    CMD_AC     shift, and go to state 15
    CMD_PLOT   shift, and go to state 16
    CMD_TRAN   shift, and go to state 17

    end        go to state 72
    line       go to state 73
    component  go to state 21
    command    go to state 22
    resistor   go to state 23
    capacitor  go to state 24
    inductor   go to state 25
    vccs       go to state 26
    vs         go to state 27
    vcvs       go to state 28
    cs         go to state 29
    cccs       go to state 30
    ccvs       go to state 31
    op         go to state 32
    dc         go to state 33
    ac         go to state 34
    tran       go to state 35
    print      go to state 36
    plot       go to state 37


State 20

    5 netlist: line •

    $default  reduce using rule 5 (netlist)


State 21

    6 line: component • EOL

    EOL  shift, and go to state 74


State 22

    7 line: command • EOL

    EOL  shift, and go to state 75


State 23

   10 component: resistor •

    $default  reduce using rule 10 (component)


State 24

   11 component: capacitor •

    $default  reduce using rule 11 (component)


State 25

   12 component: inductor •

    $default  reduce using rule 12 (component)


State 26

   13 component: vccs •

    $default  reduce using rule 13 (component)


State 27

   14 component: vs •
   31 vs: vs • RK_DC value
   32   | vs • RK_AC value

    RK_AC  shift, and go to state 76
    RK_DC  shift, and go to state 77

    $default  reduce using rule 14 (component)


State 28

   15 component: vcvs •

    $default  reduce using rule 15 (component)


State 29

   16 component: cs •

    $default  reduce using rule 16 (component)


State 30

   17 component: cccs •

    $default  reduce using rule 17 (component)


State 31

   18 component: ccvs •

    $default  reduce using rule 18 (component)


State 32

   23 command: op •

    $default  reduce using rule 23 (command)


State 33

   20 command: dc •
   39 dc: dc • VS value value value
   40   | dc • CS value value value

    VS  shift, and go to state 78
    CS  shift, and go to state 79

    $default  reduce using rule 20 (command)


State 34

   21 command: ac •

    $default  reduce using rule 21 (command)


State 35

   22 command: tran •

    $default  reduce using rule 22 (command)


State 36

   19 command: print •
   51 print: print • VAR_V
   52      | print • VAR_I

    VAR_V  shift, and go to state 80
    VAR_I  shift, and go to state 81

    $default  reduce using rule 19 (command)


State 37

   24 command: plot •
   57 plot: plot • VAR_V
   58     | plot • VAR_I

    VAR_V  shift, and go to state 82
    VAR_I  shift, and go to state 83

    $default  reduce using rule 24 (command)


State 38

    9 line: error EOL •

    $default  reduce using rule 9 (line)


State 39

   59 node: STRING •

    $default  reduce using rule 59 (node)


State 40

   60 node: INTEGER •

    $default  reduce using rule 60 (node)


State 41

   63 node: INDUCTOR •

    $default  reduce using rule 63 (node)


State 42

   62 node: CAPACITOR •

    $default  reduce using rule 62 (node)


State 43

   61 node: RESISTOR •

    $default  reduce using rule 61 (node)


State 44

   64 node: VS •

    $default  reduce using rule 64 (node)


State 45

   65 node: VCCS •

    $default  reduce using rule 65 (node)


State 46

   27 inductor: INDUCTOR node • node value

    STRING     shift, and go to state 39
    INTEGER    shift, and go to state 40
    INDUCTOR   shift, and go to state 41
    CAPACITOR  shift, and go to state 42
    RESISTOR   shift, and go to state 43
    VS         shift, and go to state 44
    VCCS       shift, and go to state 45

    node  go to state 84


State 47

   26 capacitor: CAPACITOR node • node value

    STRING     shift, and go to state 39
    INTEGER    shift, and go to state 40
    INDUCTOR   shift, and go to state 41
    CAPACITOR  shift, and go to state 42
    RESISTOR   shift, and go to state 43
    VS         shift, and go to state 44
    VCCS       shift, and go to state 45

    node  go to state 85


State 48

   25 resistor: RESISTOR node • node value

    STRING     shift, and go to state 39
    INTEGER    shift, and go to state 40
    INDUCTOR   shift, and go to state 41
    CAPACITOR  shift, and go to state 42
    RESISTOR   shift, and go to state 43
    VS         shift, and go to state 44
    VCCS       shift, and go to state 45

    node  go to state 86


State 49

   29 vs: VS node • node
   30   | VS node • node value

    STRING     shift, and go to state 39
    INTEGER    shift, and go to state 40
    INDUCTOR   shift, and go to state 41
    CAPACITOR  shift, and go to state 42
    RESISTOR   shift, and go to state 43
    VS         shift, and go to state 44
    VCCS       shift, and go to state 45

    node  go to state 87


State 50

   28 vccs: VCCS node • node node node value

    STRING     shift, and go to state 39
    INTEGER    shift, and go to state 40
    INDUCTOR   shift, and go to state 41
    CAPACITOR  shift, and go to state 42
    RESISTOR   shift, and go to state 43
    VS         shift, and go to state 44
    VCCS       shift, and go to state 45

    node  go to state 88


State 51

   33 vcvs: VCVS node • node node node value

    STRING     shift, and go to state 39
    INTEGER    shift, and go to state 40
    INDUCTOR   shift, and go to state 41
    CAPACITOR  shift, and go to state 42
    RESISTOR   shift, and go to state 43
    VS         shift, and go to state 44
    VCCS       shift, and go to state 45

    node  go to state 89


State 52

   34 cs: CS node • node value

    STRING     shift, and go to state 39
    INTEGER    shift, and go to state 40
    INDUCTOR   shift, and go to state 41
    CAPACITOR  shift, and go to state 42
    RESISTOR   shift, and go to state 43
    VS         shift, and go to state 44
    VCCS       shift, and go to state 45

    node  go to state 90


State 53

   36 ccvs: CCVS node • node VS value

    STRING     shift, and go to state 39
    INTEGER    shift, and go to state 40
    INDUCTOR   shift, and go to state 41
    CAPACITOR  shift, and go to state 42
    RESISTOR   shift, and go to state 43
    VS         shift, and go to state 44
    VCCS       shift, and go to state 45

    node  go to state 91


State 54

   35 cccs: CCCS node • node VS value

    STRING     shift, and go to state 39
    INTEGER    shift, and go to state 40
    INDUCTOR   shift, and go to state 41
    CAPACITOR  shift, and go to state 42
    RESISTOR   shift, and go to state 43
    VS         shift, and go to state 44
    VCCS       shift, and go to state 45

    node  go to state 92


State 55

   49 print: CMD_PRINT RK_OP •

    $default  reduce using rule 49 (print)


State 56

   47 print: CMD_PRINT RK_AC •

    $default  reduce using rule 47 (print)


State 57

   48 print: CMD_PRINT RK_DC •

    $default  reduce using rule 48 (print)


State 58

   50 print: CMD_PRINT RK_TRAN •

    $default  reduce using rule 50 (print)


State 59

   41 ac: CMD_AC RK_DEC • value value value

    FLOAT    shift, and go to state 66
    INTEGER  shift, and go to state 67
    VALUE    shift, and go to state 68

    value  go to state 93


State 60

   43 ac: CMD_AC RK_OCT • value value value

    FLOAT    shift, and go to state 66
    INTEGER  shift, and go to state 67
    VALUE    shift, and go to state 68

    value  go to state 94


State 61

   42 ac: CMD_AC RK_LIN • value value value

    FLOAT    shift, and go to state 66
    INTEGER  shift, and go to state 67
    VALUE    shift, and go to state 68

    value  go to state 95


State 62

   55 plot: CMD_PLOT RK_OP •

    $default  reduce using rule 55 (plot)


State 63

   53 plot: CMD_PLOT RK_AC •

    $default  reduce using rule 53 (plot)


State 64

   54 plot: CMD_PLOT RK_DC •

    $default  reduce using rule 54 (plot)


State 65

   56 plot: CMD_PLOT RK_TRAN •

    $default  reduce using rule 56 (plot)


State 66

   67 value: FLOAT •

    $default  reduce using rule 67 (value)


State 67

   68 value: INTEGER •

    $default  reduce using rule 68 (value)


State 68

   66 value: VALUE •

    $default  reduce using rule 66 (value)


State 69

   44 tran: CMD_TRAN value •
   45     | CMD_TRAN value • value
   46     | CMD_TRAN value • value value

    FLOAT    shift, and go to state 66
    INTEGER  shift, and go to state 67
    VALUE    shift, and go to state 68

    $default  reduce using rule 44 (tran)

    value  go to state 96


State 70

    0 $accept: spice $end •

    $default  accept


State 71

    3 end: END •

    $default  reduce using rule 3 (end)


State 72

    1 spice: netlist end •
    2 end: end • EOL

    EOL  shift, and go to state 97

    $default  reduce using rule 1 (spice)


State 73
